# apps/web/src/api/openapi.json
@@ -287,7 +287,7 @@
           "expected_revision": {
             "anyOf": [
               {
-                "minimum": 1.0,
+                "minimum": 0.0,
                 "type": "integer"
               },
               {
@@ -359,6 +359,10 @@
       },
       "PositionsEnvelope": {
         "properties": {
+          "current_revision": {
+            "title": "Current Revision",
+            "type": "integer"
+          },
           "snapshot": {
             "anyOf": [
               {
@@ -371,7 +375,8 @@
           }
         },
         "required": [
-          "snapshot"
+          "snapshot",
+          "current_revision"
         ],
         "title": "PositionsEnvelope",
         "type": "object"
